--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ nav:hover .nav-options span{
 }
 .moving-div{
     /* background-color: red; */
+    margin-bottom: 5vh;
     margin-top: 10vh;
     position: absolute;
     bottom: 3%;
@@ -228,7 +229,7 @@ nav:hover .nav-options span{
    
     gap: 2vw  ;
     animation-name: mobe;
-    animation-duration: 13 s;
+    animation-duration: 13s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 
@@ -251,4 +252,35 @@ nav:hover .nav-options span{
     height: 100vh;
     width: 100%;
     background-color: #111111;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3% 7%;
+    border-top: 1px solid #333;
+    padding-bottom: 15%;
+    
+}
+.page2-right{
+    height: 100%;
+    width: 40%;
+    /* background-color: #333; */
+    display: flex;
+    align-items:flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.page2-right p{
+    font-size: 1vw;
+    font-weight: 170;
+}
+h5{
+    width: 80%;
+    font-size: 1.3vw;
+    font-weight: 250;
+}
+
+.page2-left{
+    height: 100%;
+    width: 55%;
+    background-color: #333;
 }
