--- a/style.css
+++ b/style.css
@@ -268,19 +268,43 @@ nav:hover .nav-options span{
     align-items:flex-start;
     justify-content: space-between;
     flex-direction: column;
+    padding-top: 2vw;
+    margin-right: 20%;
 }
 .page2-right p{
     font-size: 1vw;
     font-weight: 170;
 }
 h5{
-    width: 80%;
-    font-size: 1.3vw;
-    font-weight: 250;
+    width: 100%;
+    font-size: 1.2vw;
+    font-weight: 200;
 }
 
 .page2-left{
     height: 100%;
     width: 55%;
-    background-color: #333;
+    /* background-color: #333 */
+    position: relative;
+    /* margin-left: 5vw; */
+}
+.left-elem{
+    cursor: pointer;
+}
+.left-elem h1{
+    font-size: 1.5vw;
+    /* width: 70%; */
+    font-weight: 300;
+    padding: 2vw 0 5vw 0;
+    border-bottom: 1px solid #333;
+
+}
+.left-elem img {
+height: 7vw;
+width:7vw;
+border-radius: 50%;
+object-fit: cover;
+ position: absolute;
+ scale: 0;
+ opacity: 0;
 }
