number card completed

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html,
 body {
   height: 100%;
   width: 100%;
+  
+}
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none;
 }
 nav{
     width: 100%;
@@ -311,7 +315,7 @@ object-fit: cover;
 
 .page3{
     height: 80vh;
-    width: 100%;
+    width: 100vw;
     background-color: #ffffff;
     background-image: url(https://lazarev.kiev.ua/la24/reel-cover.webp);
     background-size: cover;
@@ -331,6 +335,7 @@ object-fit: cover;
     opacity: 0;
     border-radius: 40px;
 }
+
 .page3 .video-container{
     height: 28vh;
     width: 10vw;
@@ -376,28 +381,102 @@ cursor: pointer;
 }
 
 
-
-/* .play-text h5 {
-    font-size: 0.8vw;
-    background-color: #fff;
-    color: #000;
-    border-radius: 50px;
-    padding: 12px 26px 10px 26px;
-    margin-top: 0.5vw;
-    font-weight: 700;
-    opacity: 1;
-    transition: all ease 0.5s;
-    transform: translateY(16%);
-    text-transform: uppercase;
-}
-
-.video-container:hover .play-text h5 {
-    opacity: 1;
-    transform: translateY(0%);
-} */
-
 .page4{
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    /* background: #333; */
+
+}
+.page4-left{
+    height: 85%;
+    width: 40%;
+    background-color: #fff;
+    margin: 4%;
+    padding: 4vw 3vw;
+    padding-bottom: 0;
+}
+.page4-left h2{
+    color: black;
+    font-size:3.5vw;
+    font-weight: 595;
+}
+.page4-right{
+    height: 85%;
+    width: 50%;
+    background-color: #fff;
+    margin: 4%;
+    padding: 4vw 3vw;
+    padding-bottom: 0;
+
+}
+.page4-right p{
+    color: #A3A3A3;
+    text-transform: uppercase;
+    margin-bottom: 4vh;
+    font-size: 1vw;
+
+}
+.page4-right h4{
+    color: black;
+    font-size: 1.5vw;
+    font-weight: 300;
+    margin-bottom: 5vh;
+
+}
+.page5{
     height: 100vh;
     width: 100%;
-
+    /* background-color: #f1bebe; */
+    
 }
+.page5 .row{
+    height: 40%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: black; */
+}
+.page5 .number-card{
+    height: 96%;
+    width: 30%;
+    background-color: #F5F5F5;
+    margin: 0 .5vw;
+    padding: 4vh 3vw ;
+
+    /* margin-bottom: 10%; */
+}
+.number-card h1{
+    color: black;
+    font-size: 4vw;
+    font-weight: 400;
+    margin-bottom: 3vh;
+}
+.number-card h2{
+    color: black;
+    font-size: 1vw;
+    font-weight: 200;
+    margin-bottom: 15vh;
+}
+.number-card h3{
+    color: #A3A3A3;
+    font-size: 1vw;
+    font-weight: 200;
+}
+
+
+
+
+
+
+
+
+
+
+.page6{
+    height: 100vh;
+    width: 100%;
+}
+
+
